nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngnix-notes-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /nginx
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: notes-app-service
              port: 
                number: 8000
